Add more of the abstractions

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_executable(holodeck main.cpp
                         Application.cpp
+                        Buffer.cpp
                         glad.c)
 
 project(holodeck)
