start working on TextManager

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,6 +11,7 @@ add_executable(holodeck main.cpp
                         Cube.cpp
                         Quad.cpp
                         Texture.cpp
+                        TextManager.cpp
                         glad.c)
 
 project(holodeck)
@@ -21,7 +22,8 @@ message("holodeck current source dir = ${CMAKE_CURRENT_SOURCE_DIR}")
 
 target_include_directories(holodeck PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
                                     PUBLIC /usr/local/include/
-                                    PUBLIC /usr/include/)
+                                    PUBLIC /usr/include/
+                                    PUBLIC /usr/include/freetype2)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
 message("Looking for cmake modules in: ${CMAKE_SOURCE_DIR}/cmake/")
@@ -32,5 +34,7 @@ find_package(GLFW3 REQUIRED)
 message(STATUS "Found GLFW3 in ${GLFW3_INCLUDE_DIR}")
 find_package(ASSIMP REQUIRED)
 message(STATUS "Found ASSIMP in ${ASSIMP_INCLUDE_DIR}")
+find_package(Freetype REQUIRED)
+message(STATUS "Found Freetype in ${Freetype_INCLUDE_DIR}")
 
 target_link_libraries(holodeck PUBLIC glfw ${CMAKE_DL_LIBS})
