separate transform state in its own struct

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,6 +14,7 @@ add_executable(holodeck main.cpp
                         TextManager.cpp
                         JsonConfig.cpp
                         InputState.cpp
+                        TransformState.cpp
                         glad.c)
 
 project(holodeck)
