Rename Application class to Holodeck, just because

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_executable(holodeck main.cpp
-                        Application.cpp
+                        Holodeck.cpp
                         BufferDescriptor.cpp
                         EboDescriptor.cpp
                         VaoDescriptor.cpp
