this is starting to look like a game engine

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,6 +15,7 @@ add_executable(holodeck main.cpp
                         JsonConfig.cpp
                         InputState.cpp
                         TransformState.cpp
+                        CameraState.cpp
                         glad.c)
 
 project(holodeck)
